--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -17,6 +17,7 @@
   --accent-color: #106eea; /* Accent color that represents your brand on the website. It's used for buttons, links, and other elements that need to stand out */
   --surface-color: #ffffff; /* The surface color is used as a background of boxed elements within sections, such as cards, icon boxes, or other elements that require a visual separation from the global background. */
   --contrast-color: #ffffff; /* Contrast color for text, ensuring readability against backgrounds of accent, heading, or default colors. */
+  --logo-color: #314057;
 }
 
 /* Nav Menu Colors - The following color variables are used specifically for the navigation menu. They are separate from the global colors to allow for more customization options */
@@ -200,15 +201,14 @@ h6 {
 }
 
 .header .logo img {
-  max-height: 36px;
-  margin-right: 8px;
+  max-height: 55px;
+  margin-left: 8px;
 }
 
 .header .logo h1 {
   font-size: 30px;
-  margin: 0;
   font-weight: 700;
-  color: var(--heading-color);
+  color: var(--logo-color);
 }
 
 .scrolled .header {
