--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14,16 +14,15 @@
   --background-color: #ffffff; /* Background color for the entire website, including individual sections */
   --default-color: #444444; /* Default color used for the majority of the text content across the entire website */
   --heading-color: #222222; /* Color for headings, subheadings and title throughout the website */
-  --accent-color: #106eea; /* Accent color that represents your brand on the website. It's used for buttons, links, and other elements that need to stand out */
+  --accent-color: #314057; /* Accent color that represents your brand on the website. It's used for buttons, links, and other elements that need to stand out */
   --surface-color: #ffffff; /* The surface color is used as a background of boxed elements within sections, such as cards, icon boxes, or other elements that require a visual separation from the global background. */
   --contrast-color: #ffffff; /* Contrast color for text, ensuring readability against backgrounds of accent, heading, or default colors. */
-  --logo-color: #314057;
 }
 
 /* Nav Menu Colors - The following color variables are used specifically for the navigation menu. They are separate from the global colors to allow for more customization options */
 :root {
   --nav-color: #222222;  /* The default color of the main navmenu links */
-  --nav-hover-color: #106eea; /* Applied to main navmenu links when they are hovered over or active */
+  --nav-hover-color: #314057; /* Applied to main navmenu links when they are hovered over or active */
   --nav-mobile-background-color: #ffffff; /* Used as the background color for mobile navigation menu */
   --nav-dropdown-background-color: #ffffff; /* Used as the background color for dropdown items that appear when hovering over primary navigation items */
   --nav-dropdown-color: #222222; /* Used for navigation links of the dropdown items in the navigation menu. */
@@ -208,7 +207,7 @@ h6 {
 .header .logo h1 {
   font-size: 30px;
   font-weight: 700;
-  color: var(--logo-color);
+  color: var(--accent-color);
 }
 
 .scrolled .header {
@@ -859,6 +858,7 @@ section,
   font-size: 48px;
   font-weight: 700;
   line-height: 56px;
+  color: var(--accent-color);
 }
 
 .hero h1 span {
@@ -2123,4 +2123,26 @@ section,
 /* Add a subtle background color change on hover */
 .service-item:hover {
   background-color: rgba(var(--primary-color-rgb), 0.05);
+}
+
+.article-card{
+  width: 100%;
+}
+
+.article-img img{
+  width: 100%;
+  padding: 4px;
+  padding-bottom: 8px;
+}
+
+@media (max-width: 768px) {
+  .article-img img {
+    height: 40vh;
+  }
+}
+
+@media (min-width: 1024px) {
+  .article-img img {
+    height: 30vh;
+  }
 }
